# eCARus-IT

./: README.md
GUI_Android_App/: Passwort.txt
GUI_Android_App/MyApplication/app/: proguard-rules.pro
GUI_Android_App/Telemetrie/app/: app-release.apk  build.gradle
GUI_Android_App/Telemetrie_APK/: key.jks
GUI_Fahrzeug/Batch/: adb_key_back.bat  adb_key_home.bat  adb_push_model.bat
GUI_Fahrzeug/C++Backend/: CMakeSetup_android_cygwin_test.bat
GUI_Fahrzeug/C++Backend/Applikationen/code/MusicServiceAccess/: CMakeLists.txt
GUI_Fahrzeug/C++Backend/Applikationen/code/MusicServiceAccess/src/: LogCatLogger.h  MusicServiceAccess.cpp  MusicServiceAccess.h  MusicServiceAccessJNIManager.cpp  MusicServiceAccessJNISignatures.h  MusicServiceAccessSO.cpp
GUI_Fahrzeug/C++Backend/android-ndk-r8e/: ndk-gdb-py.cmd
GUI_Fahrzeug/C++Backend/code/: CMakeLists.txt
GUI_Fahrzeug/C++Backend/code/MusicServiceAccess/src/: MusicServiceUpdateObserver.h
GUI_Fahrzeug/C++Backend/code/NavigationServiceAccess/: CMakeLists.txt
GUI_Fahrzeug/C++Backend/code/NavigationServiceAccess/src/: LogCatLogger.h  NavigationServiceAccessSO.cpp
GUI_Fahrzeug/C++Backend/code/NavigationServiceAccess/src/old/: events_0x10000.h
GUI_Fahrzeug/C++Backend/code/TowerAccess/: CMakeLists.txt
GUI_Fahrzeug/C++Backend/code/TowerAccess/src/: TowerAccess.cpp  TowerAccessJNIManager.cpp  TowerAccessJNIManager.h
GUI_Fahrzeug/Design/: DC_2.xcf  Design_Concept.pxm
GUI_Fahrzeug/Design/Final Design/: design.pxm
GUI_Fahrzeug/Elektrobit/Aktuelles_Projekt/: datapool.adf  datapool.bdf  datapool.bvf  datapool_pdal45.h  events_0x2.h  model.atfsm  monitor.cfg  state_machine.atfsm  views.atfv  views_transitions.atfv
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/: #CMakeSetup_android.sh#  CMakeCache.txt  CMakeLists.txt  CMakeSetup_android.sh~  Makefile  cmake_install.cmake  cmake_log.txt  install_manifest.txt
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/cmake/: platform_qnx-6.5-nto_gcc_armv7_eabi.cmake  platform_qnx-6.5-nto_qcc_armv7_eabi.cmake  toolchain_android.cmake  utility_macros.cmake
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/MusicServiceAccess/: CMakeLists.txt  Makefile  cmake_install.cmake
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/MusicServiceAccess/src/: MusicServiceAccess.cpp  MusicServiceAccess.h  MusicServiceAccessJNIManager.cpp  MusicServiceAccessJNIManager.h  MusicServiceAccessJNISignatures.h  MusicServiceAccessSO.h  MusicServiceUpdateObserver.h  events_0x10004.h  events_0x10005.h
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/NavigationServiceAccess/: Makefile  cmake_install.cmake
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/NavigationServiceAccess/src/: NavigationServiceAccess.h  NavigationServiceAccessSO.h
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/TowerAccess/: Makefile  cmake_install.cmake
GUI_Fahrzeug/Fahrzeug_C++/Backend_Auto/code/TowerAccess/src/: LogCatLogger.h  TowerAccess.cpp  TowerAccess.h  TowerAccessJNIManager.cpp  TowerAccessJNIManager.h  TowerAccessJNISignatures.h
GUI_Fahrzeug/Fahrzeug_EB/: TUM_eCARus_EB_GUI.gar
GUI_Fahrzeug/Fahrzeug_EB_6/eCARus_EB_Auto/: 2bb8b450-fc30-4201-a86c-ed4b903ac61a.gdata  927b081b-b97c-4b45-aa1c-41c942ca7516.gdata  9287de99-f9ba-4eed-9317-42746287b0ad.gdata  9882d0fc-7633-45ad-b919-2f2ab7754ada.gdata  dfb2a126-1d13-4569-9982-3812febb6ee0.gdata  e3cd1902-15ad-4d08-8dff-1b951b28ccb6.gdata  eCARus_EB_Auto.ebguide  fbefe4c6-26e0-450a-95fd-47be54571b46.gdata  ff85f195-ff25-45c0-a97b-1d38dba5a000.gdata
GUI_Fahrzeug/Fahrzeug_Java/TestNavi/: JNI_Headers.bat  local.properties
GUI_Fahrzeug/Fahrzeug_eCARus_Auto_Java_6/: JNI_Headers.bat
GUI_Fahrzeug/Files Manuel Blum/GUI_Fahrzeug_SS15_07.09.15/eCARusApps/: CMakeLists.txt
GUI_Fahrzeug/Files Manuel Blum/GUI_Fahrzeug_SS15_07.09.15/eCARusApps/NavigationServiceAccess/: CMakeLists.txt
GUI_Fahrzeug/Files Manuel Blum/GUI_Fahrzeug_SS15_07.09.15/eCARusApps/NavigationServiceAccess/src/: NavigationJNIAccess.h  NavigationServiceAccess.cpp
GUI_Fahrzeug/Files Manuel Blum/GUI_Fahrzeug_SS15_07.09.15/eCARusApps/TowerAccess/src/: SocketListener.cpp  SocketTalker.h  TowerAccess.cpp
GUI_Fahrzeug/Files Manuel Blum/GUI_Fahrzeug_SS15_07.09.15/eCARusApps/cmake/: default_flags.cmake  platform.cmake  toolchain_android.cmake  toolchain_android_cygwin_test.cmake
GUI_Fahrzeug/GUI_Fahrzeug_SS15_07.09.15/: EB_Modell_SS15.gar
GUI_Fahrzeug/GUI_Fahrzeug_SS15_09.09_15/: Modell_SS15.09.09.gar
GUI_Ladefahrrad/Ladefahrrad_EB/: README.md
GUI_Ladefahrrad/Ladefahrrad_Python_alt/: gui.ui
GUI_Telemetrie/Telemetrie/: ConfigbyID.json  JSON.json  Telemetrie.pro  configuration.cpp  configuration.h  helpwindow.ui  interpretethread.cpp  interpretethread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse_label.cpp  periodicsendthread.cpp  periodicsendthread.h  periodicsendworker.cpp  remotethread.cpp  source.qrc  special_label.cpp
Ladefahrrad/Ladefahrrad_Python_alt/: einstellungen_gui.ui  gui_func.py  hilfe_gui.ui
Ladefahrrad_C++/: LadefahradBackendEB.cpp  LadefahrradBackendEB.cpp  README.md
Ladefahrrad_EB/: README.md
Ladefahrrad_Python/: change.py  log.py  main.py  sender.py
Ladefahrrad_Python/gui/: gui.ui
Ladefahrrad_Python/source/: interpreter.py  listener.py  log.py  main.py  sender.py
eCARus Android App/eCARus/: local.properties
(+665 files in other folders)
